# plane-stress

./: .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  ruff.toml  test.py  todo.md
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  documentation.md  feature_request.md
.github/workflows/: ci.yml  greetings.yml  labeler.yml  release.yml  tests.yml
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst  requirements.txt  user_guide.rst
docs/examples/: test.ipynb
docs/user_guide/: theory.rst
src/planestress/: __init__.py  __main__.py
src/planestress/analysis/: __init__.py  finite_element.py  plane_stress.py  solver.py  utils.py
src/planestress/analysis/finite_elements/: __init__.py  finite_element.py  lines.py  quad4.py  quad8.py  quad9.py  tri3.py  tri6.py
src/planestress/post/: __init__.py  plotting.py  post.py  results.py
src/planestress/pre/: __init__.py  analysis_case.py  bc.py  boundary_condition.py  geometry.py  library.py  load_case.py  material.py  mesh.py
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  test_benchmark_patch.py
tests/cli/: __init__.py  test_main.py
tests/pre/: __init__.py  test_boundary_condition.py  test_geometry.py  test_gmsh.py  test_library.py  test_mesh.py
tests/validation/: __init__.py  test_beam.py  test_patch.py  test_validation_felippa.py  test_validation_strand7.py
