[project]
name = "planestress"
version = "0.0.4"
description = "A python package for plane stress analysis using the finite element method."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Robbie van Leeuwen", email = "robbie.vanleeuwen@gmail.com" }
]
maintainers = [
    { name = "Robbie van Leeuwen", email = "robbie.vanleeuwen@gmail.com" },
]
keywords = [
    "plane-stress",
    "structural-engineering",
    "finite-element-analysis",
    "computational-mechanics",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy~=2.2",
    "scipy~=1.14",
    "matplotlib~=3.9",
    "shapely~=2.0",
    "gmsh~=4.13",
    "numba~=0.61",
    "rich[jupyter]~=14.0",
]

[project.urls]
Homepage = "https://plane-stress.readthedocs.io"
Documentation = "https://plane-stress.readthedocs.io"
Repository = "https://github.com/robbievanleeuwen/plane-stress"
Issues = "https://github.com/robbievanleeuwen/plane-stress/issues"
Changelog = "https://github.com/robbievanleeuwen/plane-stress/releases"

[project.optional-dependencies]
pardiso = [
    "pypardiso~=0.4; platform_system == 'Windows' or platform_system == 'Linux'"
]

[dependency-groups]
dev = [
    "ipympl==0.9.7",
    "notebook==7.4.1",
    "sphinx-autobuild==2024.10.03",
]
docs = [
    "furo==2024.8.6",
    "sphinx==8.1.3",  # nbsphinx requies sphinx<8.2 for now
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "nbsphinx==0.9.7",
    "nbconvert==7.16.6",
    "sphinx-copybutton==0.5.2",
    "sphinxext-opengraph==0.10.0",
]
lint = [
    "pre-commit==4.2.0",
    "pyright==1.1.400",
]
test = [
    "pytest==8.3.5",
    "pytest-benchmark[histogram]==5.1.0",
    "pytest-check==2.5.3",
    "coverage[toml]==7.8.0",
]

[tool.uv]
default-groups = ["dev", "docs", "lint", "test"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
include = ["src"]
exclude = ["**/__init__.py"]
strict = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["planestress", "tests"]
omit = ["*/benchmarks/*"]

[tool.pytest.ini_options]
markers = [
    "benchmark_suite: entire benchmark test suite (select with '-m benchmark_suite')",
    "benchmark_analysis: analysis benchmark tests (select with '-m benchmark_analysis')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
